--- a/ui/src/main/resources/application.properties
+++ b/ui/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
+
+config.read.directory=/Users/gaurav/properties
