--- a/configurations/pom.xml
+++ b/configurations/pom.xml
@@ -50,6 +50,18 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.10.0.pr3</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
