--- a/configurations/src/main/resources/productFamily.yaml
+++ b/configurations/src/main/resources/productFamily.yaml
@@ -1,5 +1,5 @@
 productFamily:
-  environment : sandbox99
+  environment : sandbox
   id: loan-family
   name: Loan Product Family
   description: A group of related loan products offered by our financial institution.
