--- a/configurations/.gitignore
+++ b/configurations/.gitignore
@@ -3,7 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+src/.ds_store
+src/main/.DS_Store
+src/test/.DS_Store
 ### STS ###
 .apt_generated
 .classpath
