--- a/configurations/src/main/resources/product.yaml
+++ b/configurations/src/main/resources/product.yaml
@@ -1,5 +1,5 @@
 product:
-  environment : sandbox
+  environment : sandbox-3
   id: loan
   name: Loan Product
   description: A financial product for providing loans to customers.
