--- a/ui/src/main/resources/application.properties
+++ b/ui/src/main/resources/application.properties
@@ -6,4 +6,11 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
 server.port=9090
+# possible values: home, project
+resource.basepath=home
+resource.directory=configurations
+resource.metadata=metadata
+spring.devtools.livereload.enabled=false
+
+
 
