--- a/ui/src/main/resources/exportConfigurations.json
+++ b/ui/src/main/resources/exportConfigurations.json
@@ -4,6 +4,10 @@
     "id" : "tenant",
     "label" : "Tenant",
     "language" : "yaml"
+  }, {
+    "id" : "api",
+    "label" : "API",
+    "language" : "json"
   } ]
 }, {
   "name" : "P-Config",
